deployments/kubernetes/deployment/base/backend-v1-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k9o-demo-backend-v1
  namespace: k9o-demo
spec:
  replicas: 0
  selector:
    matchLabels:
      app: k9o-demo-backend
      version: v1
      env: intg
  template:
    metadata:
      labels:
        app: k9o-demo-backend
        version: v1
        env: intg
    spec:
      containers:
      - name: kuma-be
        image: kvn0218/kuma-demo-be:latest
        resources:
          requests:
           cpu: 15m
           memory: 105M
          limits:
           cpu: 15m
           memory: 105M
        
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3001
