deployments/kubernetes/deployment/base/backend-v2-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k9o-demo-backend-v2
  namespace: k9o-demo
spec:
  replicas: 0
  selector:
    matchLabels:
      app: k9o-demo-backend
      version: v2
      env: dev
  template:
    metadata:
      labels:
        app: k9o-demo-backend
        version: v2
        env: dev
    spec:
      containers:
      - image: kvn0218/kuma-demo-be:latest
        resources:
         requests:
          cpu: 15m
          memory: 105M
         limits:
          cpu: 15m
          memory: 105M
        name: kuma-be
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3001
