deployments/kubernetes/deployment/base/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: k9o-demo
  annotations:
    3001.service.kuma.io/protocol: "http"
spec:
  selector:
    app: k9o-demo-backend
  ports:
  - name: api
    port: 3001
