deployments/kubernetes/deployment/base/redis-master-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: k9o-demo
  labels:
    app: redis
    role: master
    tier: backend
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: redis
    role: master
    tier: backend
