deployments/kubernetes/deployment/base/ingress-frontend.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: ingress-k9o-mp-demo-demo
  namespace: k9o-demo
  labels:
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: k9odemo.simplecloudmachines.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              serviceName: frontend
              servicePort: http
